Adding Comments
I added the comments